--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,126 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background-color: #b8c1ec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.main {
+  width: 90%;
+  max-width: 800px;
+}
+
+header {
+  width: 100vw;
+  padding: 15px 0;
+  background-color: #232946;
+  box-shadow:  10px 10px 5px #898c9b;
+  margin-bottom: 50px;
+  display: grid;
+  grid-template: 1em 10px 1em/ 1rem auto auto 1rem;
+}
+.movie-elements {
+   display: grid;
+   justify-content: center;
+   grid-gap: 1.5rem;
+   grid-template-columns: 350px;
+   column-gap: 10px;
+   padding: 10px;
+}
+
+.movie-container {
+  display: grid;
+  grid-template: 1em 300px 75px 50px 1em / 1em auto auto 1em;
+  border-radius: 5px;
+  background-color: #232946;
+  box-shadow: 5px 5px 5px 5px #898c9b;
+}
+
+.poster {
+  width: 100%;
+  height: 100%;
+  grid-row: 1 / 3;
+  grid-column: 1 / -1;
+  object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.movie-title {
+  grid-row: 3;
+  grid-column: 2 / -2;
+  color: #b8c1ec;
+}
+.movie-rating {
+  margin: 0;
+  grid-row: 4 / 5;
+  grid-column: 2 / 3;
+  align-self: end;
+  color: #b8c1ec;
+}
+.btn {
+  grid-row: 4;
+  grid-column: 3 / -2;
+  padding: 10px 20px;
+  text-decoration: none;
+  align-self: end;
+  justify-self: end;
+  background-color: #eebbc3;
+  color: #232946;
+  letter-spacing: 1px;
+  font-weight: 600;
+  border-radius: 50px;
+}
+.btn:hover {
+  cursor: pointer;
+  background-color: #b8c1ec;
+  color: #232946;
+  border: none;
+  transition: 0.75s;
+  transform: scale(1.1);
+}
+.ri-heart-line, .ri-heart-fill {
+/*   padding: 5px;
+  background-color: #232946;
+  border-radius: 5px;  */
+  position: absolute;
+  margin-top: 10px;
+  margin-left: 5px;
+  font-size: 2em;
+  color: #b8c1ec;
+}
+
+.ri-file-list-fill {
+  font-size: 3em;
+  color: #b8c1ec;
+  grid-row: 2;
+  grid-column: -3;
+  align-self: center;
+  justify-self: end;
+}
+
+.ri-movie-2-fill {
+  font-size: 3em;
+  color: #b8c1ec;
+  grid-row: 2;
+  grid-column: 2;
+  align-self: center;
+  justify-self: start;
+}
+
+@media (min-width: 650px) {
+  .movie-elements {
+    grid-template-columns: repeat(2, 300px);
+    grid-gap: 2em 2em;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-width: 1024px) {
+  .movie-elements {
+    grid-template-columns: repeat(3, 300px);
+    grid-gap: 2em 2em;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
