--- a/src/App.css
+++ b/src/App.css
@@ -250,6 +250,7 @@ form {
 }
 
 #submit {
+  background-color: #8b96ce;
   color: #232946;
   width: 100px;
   height: 40px;
@@ -372,6 +373,7 @@ option {
 
 .trailer:last-of-type {
   background-color: #fffffe;
+  color: #171717;
   font-weight: bold;
   font-size: 1.5em;
   text-align: center;
