--- a/src/App.css
+++ b/src/App.css
@@ -98,17 +98,11 @@ header {
   position: absolute;
   bottom: 0;
   right: 0;
-  padding: 0.75rem 1rem;
+  padding: 0.5rem .75rem;
   background-color: #fffffe;
   color: #232946;
   border-top-left-radius: .7rem;
-  font-weight: bold;
-  transition: all 1s ease-in-out;
-  transform: translate(100%, 100%);
-}
-
-.img-container:hover .btn {
-  transform: translate(0, 0);
+  font-weight: bold; 
 }
 
 .btn:hover {
@@ -591,19 +585,6 @@ h4 {
   .closeBtn {
     right: 12px;
   }
-  .btn {
-    position: absolute;
-    bottom: 45px;
-    right: 80px;
-    padding: 0.75rem 1rem;
-    background-color: #fffffe;
-    color: #232946;
-    border-top-left-radius: .7rem;
-    font-weight: bold;
-  }
-  .img-container:hover .btn {
-    transform: none;
-  }
 }
 
 /* Small screen devices (600px and above) */
@@ -785,19 +766,6 @@ h4 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-  }
-  .btn {
-    position: absolute;
-    bottom: 45px;
-    right: 80px;
-    padding: 0.75rem 1rem;
-    background-color: #fffffe;
-    color: #232946;
-    border-top-left-radius: .7rem;
-    font-weight: bold;
-  }
-  .img-container:hover .btn {
-    transform: none;
   }
   .genre {
     width: 120px;
