--- a/src/App.css
+++ b/src/App.css
@@ -503,6 +503,11 @@ h4 {
     justify-content: space-between;
   }
 
+  ::placeholder {
+    text-indent: 10px;
+    color: #232946;
+  }
+
   .reviews {
     width: 400px;
     padding: 3em 2em;
@@ -607,6 +612,11 @@ h4 {
   .info {
     display: flex;
     justify-content: space-between;
+  }
+
+  ::placeholder {
+    text-indent: 10px;
+    color: #232946;
   }
 
   .reviews {
@@ -721,6 +731,11 @@ h4 {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  ::placeholder {
+    text-indent: 10px;
+    color: #232946;
   }
 
   .review-container {
