--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html, body {
 
 
 header {
-  position: relative;
+  /* position: relative; */
   width: 100vw;
   padding: 15px 0;
   background-color: #232946;
@@ -131,6 +131,7 @@ header {
 }
 .movieList {
   margin: 0;
+  margin-right: 5px;
   grid-row: 2;
   grid-column: -3;
   align-self: center;
@@ -141,6 +142,22 @@ header {
   font-size: 3em;
   color: #b8c1ec;
 }
+.fav-movie-length {
+  position: fixed;
+  height: 25px;
+  width: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #fff;
+  top: 2px;
+  right: 10px;
+  color: #b8c1ec;
+  font-size: 1.25rem;
+  z-index: 10;
+}
+
 
 .ri-movie-2-fill {
   font-size: 3em;
@@ -285,6 +302,10 @@ input {
   line-height: 1.4;
 }
 
+.genre-container {
+  width: 100px;
+}
+
 .searchContainer button {
   appearance: none;
   background-color: transparent;
@@ -306,6 +327,7 @@ input {
 }
 select {
   padding: 7px 5px;
+  height: 30px;
   border: none;
   border-radius: 5px;
 }
